[package]
name = "emvsign"
description = "Sign files with EMV payment cards in case you want to do that for some reason"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4"
lazy_static = "1.4.0"
log = "0.4"
pcsc = "2.7"
pretty_env_logger = "0.5"
serde = { version = "1.0.163", features = ["derive"] }
structopt = "0.3"
