[package]
name = "emvsign"
description = "Sign files with EMV payment cards in case you want to do that for some reason"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
crypto-bigint = "0.5.2"
hex = "0.4"
lazy_static = "1.4.0"
log = "0.4"
pcsc = "2.7"
pretty_env_logger = "0.5"
serde = { version = "1.0.163", features = ["derive"] }
sha1 = "0.10.5"
structopt = "0.3"
